--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <div class="profile"></div>
         <h1 class="main">JEEHYUN PARK</h1>
         <p class="sub">personal branding page of JEEHYUN</p>
-        <a target="_blank" href="https://rosetteflo.github.io/kokoa-clone-2021/">PORTFOLIO</a>
+        <a target="_blank" href="https://rosetteflo.github.io/jhweb/">PORTFOLIO</a>
 <a target="_blank" href="https://www.linkedin.com/in/rosetteflo/">LINKEDIN</a>
 <a target="_blank" href="https://github.com/Rosetteflo">GITHUB</a>
 <a href="resume.pdf" download="resume.pdf">RESUME</a>
